dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-service
  namespace: argocd
  labels:
    app: argocdapp
spec:
  selector:
    app: argocdapp
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
