dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  labels:
    app: argocdapp
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nextapp.arpan
      http:
        paths:
          - path: /hello/*  # Path to match (supports regex)
            pathType: Prefix
            backend:
              service:
                name: argocd-service
                port:
                  number: 80
